additional refactor and trans support for activity, actor summary, and summary CRUD forms

--- a/arches_hip/templates/views/forms/activity-actions.htm
+++ b/arches_hip/templates/views/forms/activity-actions.htm
@@ -5,7 +5,7 @@
 
 <div id='activity-actions-section'>
                     
-        <!-- Actiions Start CRUD Form -->
+        <!-- Activity Start CRUD Form -->
         <div class="row">
             <div class="col-xs-12">
                 <div class="padding-left-10">
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-xs-12">
 
-                <!-- Address -->
+                <!--  -->
                 <div class="arches-crud-child-section">
                     <dl>
                         <dd class="arches-CRUD-child-title">
