--- a/arches_hip/templates/views/forms/actor-summary.htm
+++ b/arches_hip/templates/views/forms/actor-summary.htm
@@ -4,12 +4,14 @@
 {% block form_content %}
 
 <div id='name-section'>
+
+    <!-- Actor Name -->
     <div class="row">
         <div class="col-xs-12">
             <div class="padding-left-10">
 
                 <dl>
-                    <!-- Actor Name -->
+                    <!-- Title -->
                     <dt>
                         <h5 id="arches-names-form" class="section-headline">{% trans "Names" %}</h5>
                     </dt>
@@ -66,9 +68,9 @@
             </div>
         </div>
     </div>
-    <!-- End Title CRUD Form Container -->
+    <!-- End Name CRUD Form Container -->
 
-    <!-- Title Records -->
+    <!-- Name Records -->
     <div class="row">
         <div class="col-xs-12">
 
@@ -95,7 +97,7 @@
             </div>
         </div>
     </div>
-    <!-- End Title Records -->
+    <!-- End Name Records -->
 </div>
 
 
@@ -458,9 +460,9 @@
             </div>
         </div>
     </div>
-    <!-- End Birthdate CRUD -->
+    <!-- End Keywords CRUD -->
 
-    <!-- Birthdate Records -->
+    <!-- Keyword Records -->
     <div class="row">
         <div class="col-xs-12">
 
@@ -488,7 +490,7 @@
             </div>
         </div>
     </div>
-    <!-- End Activity End Records -->
+    
 </div>
 <!-- End Keywords Records -->
 
