--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -22,7 +22,7 @@
                             <div class="col-xs-12 hidden-xs">
 
                                 <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
-                                " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></input>
+                                " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: '{% trans "Type" %}', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></input>
 
                                 {% include 'views/components/add-item-button.htm' %}
 
@@ -31,7 +31,7 @@
                             <div class="col-xs-12  hidden-sm hidden-md hidden-lg">
 
                                 <input style="width:100%; height: 36px; padding-top: 2px; margin-bottom: 5px" class="select2 arches-select2-crud-form resource-type" id="resource-type-dropdown
-                                " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: 'Type', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></input>
+                                " data-bind="select2: {value: getEditedNode('RESOURCE_TYPE_CLASSIFICATION.E55', 'value'), placeholder: '{% trans "Type" %}', multiple: false, dataKey: 'RESOURCE_TYPE_CLASSIFICATION.E55'}"></input>
 
                                 {% include 'views/components/add-item-button.htm' %}
 
@@ -62,7 +62,7 @@
 
                         <div data-bind='foreach: getBranchLists()'>
                             <div class="arches-crud-record">
-                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="{% trans "Delete this type" %}"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
                                 <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind="click: $parent.editItem.bind($parent)" title="{% trans "Edit this type" %}"><span data-bind='text: nodes.get("RESOURCE_TYPE_CLASSIFICATION.E55", "label")' style="padding-right:2px;"></span>
                                 </a>
                             </div>
@@ -98,8 +98,8 @@
 
                             <div class="col-xs-12 hidden-xs">
                                         
-                                <input class="form-control arches-form-input" id="resource-name" style="width: 50%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
-                                <input style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></input>
+                                <input class="form-control arches-form-input" id="resource-name" style="width: 50%;" placeholder='{% trans "Name" %}' data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
+                                <input style="width:30%; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: '{% trans "Type" %}', dataKey: 'NAME_TYPE.E55'}"></input>
 
                                 {% include 'views/components/add-item-button.htm' %}
 
@@ -107,10 +107,10 @@
 
                             <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
 
-                                <input class="form-control arches-form-input" id="resource-name" style="width: 100%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
+                                <input class="form-control arches-form-input" id="resource-name" style="width: 100%;" placeholder='{% trans "Name" %}' data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
                                 <div class="margin-top-5"></div>
                                 
-                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></input>
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: '{% trans "Type" %}', dataKey: 'NAME_TYPE.E55'}"></input>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5"></div>
@@ -136,7 +136,7 @@
     <div class="row">
         <div class="col-xs-12">
 
-            <!-- Address -->
+            <!--  -->
             <div class="arches-crud-child-section">
                 <dl>
                     <dd class="arches-CRUD-child-title">
@@ -148,7 +148,7 @@
 
                         <div data-bind='foreach: getBranchLists()'>
                             <div class="arches-crud-record">
-                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="{% trans "Delete this name" %}"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
                                 <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind="click: $parent.editItem.bind($parent)" title="{% trans "Edit this name" %}"><span data-bind='text: nodes.get("NAME.E41", "value")' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">(<span data-bind='text: nodes.get("NAME_TYPE.E55", "label")'></span>)</span>
                                 </a>
                             </div>
@@ -174,28 +174,29 @@
                 <dl>
                     <!-- Title -->
                     <dt>
-                        <h5 id="arches-names-form" class="section-headline">Important Dates</h5>
+                        <h5 id="arches-names-form" class="section-headline">{% trans "Important Dates" %}</h5>
                     </dt>
 
                     <!-- Form -->
                     <dd class="arches-RDM-labels">
-
                         <div class="row">
-
                             <div class="col-xs-12" style="padding-top: 2px;">
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
-                                <div class="col-sm-6 hidden-xs" style="padding-right: 5px;padding-left: 0px;">
-                                    <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
+                                <div class="col-sm-6 hidden-xs" style="padding-right: 5px; padding-left: 0px;">
+                                    <input style="width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder='{% trans "Date type" %}' data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
                                     </input>
                                 </div>
 
                                 <div class="col-sm-6 hidden-sm hidden-md hidden-lg" style="padding-right: 0px; padding-left: 0px;">
-                                    <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
+                                    <input style="width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder='{% trans "Date Type" %}' data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
                                     </input>
                                 </div>
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
                                 <div class="col-sm-4 form-group hidden-xs" style="padding-left: 0px; padding-right: 0px; width: 30%;">
                                     <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
@@ -205,7 +206,7 @@
                                 </div>
 
                                 <div class="col-sm-4 form-group hidden-sm hidden-md hidden-lg" style="padding-left: 0px; padding-right: 0px; width: 100%; margin-bottom:0;">
-                                    <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
+                                    <div class="input-group datetimepicker" style ="width:100%;" >
                                         <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                     </div>
@@ -244,7 +245,7 @@
                         
                         <div data-bind='foreach: getBranchLists()'>
                             <div class="arches-crud-record">
-                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Remove this filter"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="{% trans "Delete this date" %}"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
                                 <a href="javascript:void(0)" class="text-muted arches-CRUD-child arches-CRUD-edit" data-bind="click: $parent.editItem.bind($parent)" title="{% trans "Edit this date" %}"><span data-bind='text: nodes.get("BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55", "label") + " " + nodes.get("START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49", "value").substr(0,10)' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier"></span>
                                 </a>
                             </div>
@@ -277,9 +278,9 @@
                     <dd>
                         <div class="row">
                             <div class="col-xs-12">
-                                <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type hidden-xs" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Keyword', dataKey: 'KEYWORD.E55'}"></input>
+                                <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type hidden-xs" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: "{% trans 'Keyword' %}", dataKey: 'KEYWORD.E55'}"></input>
 
-                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type  hidden-sm hidden-md hidden-lg" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Keyword', dataKey: 'KEYWORD.E55'}"></input>
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type  hidden-sm hidden-md hidden-lg" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: "{% trans 'Keyword' %}", dataKey: 'KEYWORD.E55'}"></input>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
@@ -301,7 +302,7 @@
     <div class="row">
         <div class="col-xs-12">
 
-            <!-- Address -->
+            <!--  -->
             <div class="arches-crud-child-section">
                 <dl>
                     <dd class="arches-CRUD-child-title">
@@ -312,7 +313,7 @@
                         
                         <div data-bind='foreach: getBranchLists()'>
                             <div class="arches-crud-record">
-                                <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this keyword"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                <a href="javascript:void(0)" class="arches-CRUD-child" title="{% trans "Delete this keyword" %}"><i data-bind="click: $parent.deleteItem.bind($parent)" class="arches-CRUD-delete fa fa-times-circle"></i></a>
                                 <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind="click: $parent.editItem.bind($parent)" title="{% trans "Edit this keyword" %}"><span data-bind='{text: nodes.get("KEYWORD.E55", "label")}' style="padding-right:2px;"></span>
                                 </a>
                             </div>
