--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -191,7 +191,7 @@
                                 </div>
 
                                 <div class="col-sm-6 hidden-sm hidden-md hidden-lg" style="padding-right: 0px; padding-left: 0px;">
-                                    <input style="width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder='{% trans "Date Type" %}' data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
+                                    <input style="width:100%; font-size: 13px;" class="select2 arches-select2-crud-form" id="date-type" placeholder='{% trans "Date Type" %}' data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55,END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'important_dates'}">
                                     </input>
                                 </div>
 
@@ -199,8 +199,8 @@
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
                                 <div class="col-sm-4 form-group hidden-xs" style="padding-left: 0px; padding-right: 0px; width: 30%;">
-                                    <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
-                                        <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                    <div class="input-group datetimepicker" style ="width:100%;" >
+                                        <input style="font-size: 13px; height:32px;" type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49,END_DATE_OF_EXISTENCE.E49', 'value')} ">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                     </div>
                                 </div>
